<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_meal"
                android:textColor="@color/colorPurple" />


            <CheckBox
                android:id="@+id/meal_dessert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_dessert" />


            <CheckBox
                android:id="@+id/meal_beef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/new_entry_beef" />

            <CheckBox
                android:id="@+id/meal_vegetarian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_vegetarian" />

            <CheckBox
                android:id="@+id/meal_starter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_starter" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_area"
                android:textColor="@color/colorPurple" />

            <RadioGroup
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_indian" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/new_entry_british" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_american" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_mexican" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_ingredient"
                android:textColor="@color/colorPurple" />

            <Spinner
                android:id="@+id/ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_tags"
                android:textColor="@color/colorPurple" />

            <EditText
                android:id="@+id/tagsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/display_selected_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPurple"
                android:textColor="@color/colorWhite"
                android:text="@string/selected" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>