<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/colorPrimaryDark"
tools:context="com.meals.foodb.RegisterActivity">


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/register"
    android:textColor="@color/colorGrey"
    android:textSize="25dp"
    android:textStyle="bold"
    android:layout_marginTop="30dp"/>

<EditText
    android:id="@+id/registerUsername"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/register_username"
    android:layout_marginTop="50dp"
    android:paddingBottom="25dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"/>

<EditText
    android:id="@+id/registerPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/register_password"
    android:layout_marginTop="35dp"
    android:paddingBottom="25dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"/>

<EditText
    android:id="@+id/registerEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/register_email"
    android:layout_marginTop="35dp"
    android:paddingBottom="25dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"/>

<Space
    android:layout_width="match_parent"
    android:layout_height="40dp" />

<Button
    android:id="@+id/registerButton2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="5dp"
    android:background="@color/colorGrey"
    android:layout_marginLeft="5dp"
    android:text="@string/login_register_btn" />
</LinearLayout>